recursion.logo.lessons.recursion.logo.koch.HexaKoch.scala.error
HexaKoch:13: error: ')' expected but ';' found.
    hexaKoch(levels-1,length*0.14) ;droite(60
                                   ^HexaKoch:14: error: ')' expected but ';' found.
    hexaKoch(levels-1,length*0.14) ;gauche(120)
                                   ^